--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 # production
 
 # misc
-/backend/config/config.env
+# /backend/config/config.env
 /frontend/.env
 /frontend/.DS_Store
 /frontend/.env.local
